--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="./recipies/nudeln-mit-pesto.html">Nudeln mit Pesto</a></li>
     </ul>
     <img src="recipies/img/remy.jpeg">
+    <!-- Congrats if you read this! Have a great day-->
     
 </body>
 </html>
